--- a/aula06/ex003.html
+++ b/aula06/ex003.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
-            background-color: rgb(17, 22, 93);
+            background-color: rgb(79, 17, 93);
             color: white;
             font: normal 15pt Arial;
         }
@@ -20,10 +20,10 @@
     <h1>Olá, Mundo!</h1>
     <p>Já me livrei da maldição</p>
     <script>
-        window.alert('Minha primeira mensagem');
-        window.confirm('Está gostando de JavaScript?'); //Janela com botão ok e cancelar
-        window.prompt ('Qual é seu nome?'); // Vai perguntar o nome
-        
+        var n1 = Number(window.prompt('Digite um número: '));
+        var n2 = Number(window.prompt('Digite outro valor: '));
+        var s = n1 + n2
+        window.alert(`A soma entre ${n1} e ${n2} é igual a ${s}`)
     </script>
 </body>
 </html>
