--- a/aula06/ex002.html
+++ b/aula06/ex002.html
@@ -20,9 +20,8 @@
     <h1>Olá, Mundo!</h1>
     <p>Já me livrei da maldição</p>
     <script>
-        window.alert('Minha primeira mensagem');
-        window.confirm('Está gostando de JavaScript?'); //Janela com botão ok e cancelar
-        window.prompt ('Qual é seu nome?'); // Vai perguntar o nome
+        var nome = window.prompt ('Qual é seu nome?');
+        window.alert('É um grande prazer de conhecer, ' + nome + '!');
         
     </script>
 </body>
