--- a/aula06/ex003.html
+++ b/aula06/ex003.html
@@ -20,10 +20,10 @@
     <h1>Olá, Mundo!</h1>
     <p>Já me livrei da maldição</p>
     <script>
-        var n1 = Number(window.prompt('Digite um número: '));
-        var n2 = Number(window.prompt('Digite outro valor: '));
+        var n1 = window.prompt('Digite um número: ')
+        var n2 = window.prompt('Digite outro número: ')
         var s = n1 + n2
-        window.alert(`A soma entre ${n1} e ${n2} é igual a ${s}`)
+        window.alert('A soma dos valores é ' + s)
     </script>
 </body>
 </html>
