--- a/aula06/ex003.html
+++ b/aula06/ex003.html
@@ -5,25 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
-            background-color: rgb(79, 17, 93);
+            background-color: rgba(207, 207, 64, 0.877);
             color: white;
             font: normal 15pt Arial;
         }
 
         h1 {
-            color: rgb(255, 224, 229);
+            color: rgb(255, 0, 43);
         }
     </style>
     <title>Meu primeiro programa...</title>
 </head>
 <body>
     <h1>Olá, Mundo!</h1>
-    <p>Já me livrei da maldição</p>
+    <p>Stray Kids</p>
     <script>
-        var n1 = Number.parseInt(window.prompt('Digite um número: '))
-        var n2 = Number.parseInt(window.prompt('Digite outro número: '))
+        var n1 = Number(window.prompt('Digite um número: '))
+        var n2 = Number(window.prompt('Digite outro número: '))
         var s = n1 + n2
-        window.alert('A soma dos valores é ' + s)
+        window.alert('A soma dos valores é ' + String(s))
     </script>
 </body>
 </html>
