--- a/aula11/ex009.html
+++ b/aula11/ex009.html
@@ -6,6 +6,11 @@
     <title>País</title>
 </head>
 <body>
-    <!--Faça um site com o exercício 9-->
+    
+    <h1>Você é Brasileiro?</h1>
+    <input type="text" name="pa" id="pa"> 
+    <input type="button" value="Verificar" onclick="clicar()">
+    <p id="mensagem"></p> 
+
 </body>
 </html>
