--- a/aula12ex/ex014/modelo.html
+++ b/aula12ex/ex014/modelo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hora do Dia</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="estilo/estilo.css">
 </head>
 <body onload="carregar()">
     <header>
@@ -15,12 +15,12 @@
             Aqui vai aparecer a mensagem...
         </div>
         <div id="img">
-            <img id="imagem" src="fotomanha.png" alt="foto do dia">
+            <img id="imagem" src="imagens/fotomanha.png" alt="foto do dia">
         </div>
     </section>
     <footer>
         <p>&copy; Curso em Video</p>
     </footer>
-    <script src="script.js"></script>
+    <script src="script/script.js"></script>
 </body>
 </html>
