--- a/aula14ex/ex016/modelo.html
+++ b/aula14ex/ex016/modelo.html
@@ -11,13 +11,13 @@
         <h1>Vamos Contar</h1>
     </header>
     <section>
-        <div>
-            <p>Início: <input type="number" name="inicio" id="inicio"></p>
-            <p>Fim: <input type="number" name="fim" id="fim"></p>
-            <p>Passo: <input type="number" name="passo" id="passo"></p>
+        <div id="dados">
+            <p>Início: <input type="number" name="inicio" id="txti"></p>
+            <p>Fim: <input type="number" name="fim" id="txtf"></p>
+            <p>Passo: <input type="number" name="passo" id="txtp"></p>
+            <input type="button" value="Contar" onclick="contar()">
         </div>
-        <input type="button" value="Contar" id="res" onclick="contar">
-        <div>
+        <div id="res">
             <br>
             Preparando a contagem...
         </div>
